test/cases/parser/Quantifier2.errors
src/Quantifier2.b:5:27: Syntax error (expected variable name)
