test/cases/parser/Quantifier2.b
module Quantifier2
interface {
  function f(): i32
  {
    var b: bool = forall (99:i32) true;
  }
}
